tests/asm-link/incbin-start-bad/rgbasm.err
error: specified start offset is greater than length of `incbin` file
   ╭─[ test.asm:3:23 ]
   │
 3 │ INCBIN "../data.bin", 999
   │                       ─┬─  
   │                        ╰─── cannot skip the first 999 bytes
───╯
error: specified start offset is greater than length of `incbin` file
   ╭─[ test.asm:4:23 ]
   │
 4 │ INCBIN "../data.bin", 999, 1
   │                       ─┬─  
   │                        ╰─── cannot skip the first 999 bytes
───╯
2 errors generated.
